--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   authelia:
-    image: authelia/authelia:latest
+    build: .
     container_name: authelia
     environment:
       - TZ=Europe/Istanbul # Change to your timezone
